:memo: update read me

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         </p>
 
         <p>
-          Linguangens: HTML, CSS3, Javascript, Node, React, ReactNative, Delphi,
+          Estudando DevOps para solucionar problemas do dia a dia como desenvolvedor e difundindo a cultura DevOps na empresa que trabalho
+        </p>
+
+        <p>
+          Linguangens: HTML, CSS3, Javascript, PHP, Node, React, ReactNative, Delphi,
           Swift, Java e C#
         </p>
 
