:sparkles: Remove files and update link for VCARD

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           /></a>
         </li>
         <li class="contato">
-          <a href="contato.vcard" target="_blank"
+          <a href="https://drive.google.com/uc?export=download&id=1GJqfOA9kVNV_YjuHg-EXKcUzs21Sj0zI" target="_blank"
             ><img
               src="https://img.shields.io/badge/-Contato-336699?style=for-the-badge&logo=googlecalendar&logoColor=white"
               alt="Virtual Card"
